# SqueletteProjetCpp

./: .gitignore  CMakeLists.txt  MonProjetCpp  README.md  cmake_install.cmake
include/: MyClass.h
src/: MyClass.cpp  main.cpp
